test-suite/tests/ui/states/invalid/none_declared.stderr
error: no states were declared
 --> tests/ui/states/invalid/none_declared.rs:3:1
  |
3 | #[stated]
  | ^^^^^^^^^
...
6 | #[stated]
  | --------- in this attribute macro expansion
  |
  = note: this error originates in the attribute macro `::stated::stated_internal` which comes from the expansion of the attribute macro `stated` (in Nightly builds, run with -Z macro-backtrace for more info)
